- secretword verwijderd als user attribuut - frontend eerste opzet gerealiseerd (login en registration schermen) - api call /users/authenticate toegevoegd - corsconfiguration toegevoegd voor backend - proxy toegevoegd voor frontend - user login functionaliteit werkt!
